# thewarheads.com

./: .gitignore  Cargo.toml  README.md  build.rb  config-overrides.js  discography.yaml  package-lock.json  package.json
css/: screen.css
public/: index.html  manifest.json
src/: About.tsx  Album.tsx  Albums.tsx  App.tsx  Header.tsx  Podcasts.tsx  discography.yaml  discography.yaml.d.ts  index.css  index.tsx  lib.rs  main.rs
src/components/: About.tsx  Album.tsx  AlbumLink.tsx  Albums.tsx  App.tsx  Footer.tsx  Home.tsx  Links.tsx  Podcasts.tsx
src/data/: discography.yaml  discography.yaml.d.ts
src/models/: Album.tsx
src/styles/: index.css
templates/: album.html  album.html.erb  index.html  index.html.erb
